# gempy

./: pyproject.toml
src/gempy/API/: examples_generator.py  initialization_API.py
src/gempy/modules/data_manipulation/: _engine_factory.py
test/: conftest.py
